# fraud-dashboard

./: .gitignore  README.md  pyproject.toml  requirements.txt
init/: Fraud detection.csv  fraud-detection-data.xlsx  ml_fraud_detection.ipynb  requirements.txt
streamlit/: app.py  rf_model.pkl  xgb_model.pkl
training/: main.py
