[project]
name = "fraud-dashboard"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "pandas>=2.2.2",
    "numpy>=2.0.0",
    "jupyter>=1.0.0",
    "ipython>=8.26.0",
    "streamlit>=1.36.0",
    "seaborn>=0.13.2",
    "matplotlib>=3.9.1",
    "openpyxl>=3.1.5",
    "scikit-learn>=1.5.1",
    "xgboost>=2.1.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[tool.rye]
managed = true
virtual = true
dev-dependencies = []
